--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,62 @@
-anyio==3.7.0
-bcrypt==4.0.1
-boltons @ file:///C:/b/abs_707eo7c09t/croot/boltons_1677628723117/work
-brotlipy==0.7.0
-certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
-cffi @ file:///C:/b/abs_49n3v2hyhr/croot/cffi_1670423218144/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click==8.1.3
-colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
-conda==23.3.1
-conda-content-trust @ file:///C:/Windows/TEMP/abs_4589313d-fc62-4ccc-81c0-b801b4449e833j1ajrwu/croots/recipe/conda-content-trust_1658126379362/work
-conda-package-handling @ file:///C:/b/abs_fcga8w0uem/croot/conda-package-handling_1672865024290/work
-conda_package_streaming @ file:///C:/b/abs_0e5n5hdal3/croot/conda-package-streaming_1670508162902/work
-cryptography @ file:///C:/b/abs_8ecplyc3n2/croot/cryptography_1677533105000/work
-dnspython==2.3.0
-ecdsa==0.18.0
-email-validator==2.0.0.post2
-exceptiongroup==1.1.2
-fastapi==0.99.1
-h11==0.14.0
-httpcore==0.17.2
-httptools==0.5.0
-httpx==0.24.1
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonpatch @ file:///tmp/build/80754af9/jsonpatch_1615747632069/work
-jsonpointer==2.1
-MarkupSafe==2.1.3
-menuinst @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_455sf5o0ct/croots/recipe/menuinst_1661805970842/work
-orjson==3.9.1
-packaging @ file:///C:/b/abs_ed_kb9w6g4/croot/packaging_1678965418855/work
-passlib==1.7.4
-pluggy @ file:///C:/ci/pluggy_1648042746254/work
-pyasn1==0.5.0
-pycosat @ file:///C:/b/abs_4b1rrw8pn9/croot/pycosat_1666807711599/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic==1.10.10
-pyOpenSSL @ file:///C:/b/abs_552w85x1jz/croot/pyopenssl_1677607703691/work
-PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
-python-dotenv==1.0.0
-python-jose==3.3.0
-python-multipart==0.0.6
-PyYAML==6.0
-requests @ file:///C:/b/abs_80_edxtvhu/croot/requests_1678709752318/work
-rsa==4.9
-ruamel.yaml @ file:///C:/b/abs_30ee5qbthd/croot/ruamel.yaml_1666304562000/work
-ruamel.yaml.clib @ file:///C:/b/abs_aarblxbilo/croot/ruamel.yaml.clib_1666302270884/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sniffio==1.3.0
-starlette==0.27.0
-toolz @ file:///C:/b/abs_cfvk6rc40d/croot/toolz_1667464080130/work
-tqdm @ file:///C:/b/abs_f76j9hg7pv/croot/tqdm_1679561871187/work
-typing_extensions==4.7.1
-ujson==5.8.0
-urllib3 @ file:///C:/b/abs_3ce53vrdcr/croot/urllib3_1680254693505/work
-uvicorn==0.22.0
-watchfiles==0.19.0
-websockets==11.0.3
-win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
-wincertstore==0.2
-zstandard==0.19.0
+anyio
+bcrypt
+boltons
+brotlipy
+certifi
+cffi
+charset-normalizer
+click
+colorama
+conda
+conda-content-trust 
+conda-package-handling 
+conda_package_streaming 
+cryptography
+dnspython
+ecdsa
+email-validator
+exceptiongroup
+fastapi
+h11
+httpcore
+httptools
+httpx
+idna
+itsdangerous
+Jinja2
+jsonpatch
+jsonpointer
+MarkupSafe
+menuinst
+orjson
+packaging
+passlib
+pluggy
+pyasn1
+pycosat
+pycparser
+pydantic
+pyOpenSSL
+PySocks
+python-dotenv
+python-jose
+python-multipart
+PyYAML
+requests
+rsa
+ruamel.yaml
+ruamel.yaml.clib
+six
+sniffio
+starlette
+toolz
+tqdm
+typing_extensions
+ujson
+urllib3
+uvicorn
+watchfiles
+websockets
+win-inet-pton
+wincertstore
+zstandard
