--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,52 @@
-anyio
-bcrypt
-boltons
-brotlipy
-certifi
-cffi
-charset-normalizer
-click
-colorama
-conda
-conda-content-trust 
-conda-package-handling 
-conda_package_streaming 
-cryptography
-dnspython
-ecdsa
-email-validator
-exceptiongroup
-fastapi
-h11
-httpcore
-httptools
-httpx
-idna
-itsdangerous
-Jinja2
-jsonpatch
-jsonpointer
-MarkupSafe
-menuinst
-orjson
-packaging
-passlib
-pluggy
-pyasn1
-pycosat
-pycparser
-pydantic
-pyOpenSSL
-PySocks
-python-dotenv
-python-jose
-python-multipart
-PyYAML
-requests
-rsa
-ruamel.yaml
-ruamel.yaml.clib
-six
-sniffio
-starlette
-toolz
-tqdm
-typing_extensions
-ujson
-urllib3
-uvicorn
-watchfiles
-websockets
-win-inet-pton
-wincertstore
-zstandard
+anyio==3.7.0
+bcrypt==4.0.1
+
+brotlipy==0.7.0
+
+click==8.1.3
+
+conda==23.3.1
+
+dnspython==2.3.0
+ecdsa==0.18.0
+email-validator==2.0.0.post2
+exceptiongroup==1.1.2
+fastapi==0.99.1
+h11==0.14.0
+httpcore==0.17.2
+httptools==0.5.0
+httpx==0.24.1
+
+itsdangerous==2.1.2
+Jinja2==3.1.2
+
+jsonpointer==2.1
+MarkupSafe==2.1.3
+
+orjson==3.9.1
+
+passlib==1.7.4
+
+pyasn1==0.5.0
+
+pydantic==1.10.10
+
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+PyYAML==6.0
+
+rsa==4.9
+
+sniffio==1.3.0
+starlette==0.27.0
+
+typing_extensions==4.7.1
+ujson==5.8.0
+
+uvicorn==0.22.0
+watchfiles==0.19.0
+websockets==11.0.3
+
+wincertstore==0.2
+zstandard==0.19.0
