--- a/requirements.txt
+++ b/requirements.txt
@@ -30,10 +30,10 @@ pyasn1==0.5.0
 
 pydantic==1.10.10
 
-python-dotenv==1.0.0
-python-jose==3.3.0
-python-multipart==0.0.6
-PyYAML==6.0
+python-dotenv
+python-jose
+python-multipart
+PyYAML
 
 rsa==4.9
 
