--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,29 @@
-anyio==3.7.0
-bcrypt==4.0.1
-
-brotlipy==0.7.0
-
-click==8.1.3
-
-
-dnspython==2.3.0
-ecdsa==0.18.0
-email-validator==2.0.0.post2
-exceptiongroup==1.1.2
-fastapi==0.99.1
-h11==0.14.0
-httpcore==0.17.2
-httptools==0.5.0
-httpx==0.24.1
-
-itsdangerous==2.1.2
-Jinja2==3.1.2
-
-jsonpointer==2.1
-MarkupSafe==2.1.3
-
-orjson==3.9.1
-
-passlib==1.7.4
-
-pyasn1==0.5.0
-
-pydantic==1.10.10
-
+ecdsa
+email-validator
+exceptiongroup
+fastapi
+h11
+httpcore
+httpx
+itsdangerous
+Jinja2
+jsonpointer
+MarkupSafe
+orjson
+passlib
+pyasn1
+pydantic
 python-dotenv
 python-jose
 python-multipart
 PyYAML
-
-rsa==4.9
-
-sniffio==1.3.0
-starlette==0.27.0
-
-typing_extensions==4.7.1
-ujson==5.8.0
-
-uvicorn==0.22.0
-watchfiles==0.19.0
-websockets==11.0.3
-
-wincertstore==0.2
-zstandard==0.19.0
+rsa
+sniffio
+starlette
+typing_extensions
+ujson
+uvicorn
+watchfiles
+websockets
+wincertstore
+zstandard
