--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,59 @@
-ecdsa
-email-validator
-exceptiongroup
-fastapi[all]
-h11
-httpcore
-httpx
-itsdangerous
-Jinja2
-jsonpointer
-MarkupSafe
-orjson
-passlib
-pyasn1
-pydantic
-python-dotenv
-python-jose
-python-multipart
-PyYAML
-rsa
-sniffio
-starlette
-typing_extensions
-ujson
-uvicorn
-watchfiles
-websockets
-wincertstore
-zstandard
-sqlalchemy
+anyio==3.7.0
+bcrypt==4.0.1
+boltons 
+brotlipy==0.7.0
+certifi 
+cffi 
+charset-normalizer 
+click==8.1.3
+colorama 
+
+cryptography
+dnspython==2.3.0
+ecdsa==0.18.0
+email-validator==2.0.0.post2
+exceptiongroup==1.1.2
+fastapi==0.99.1
+h11==0.14.0
+httpcore==0.17.2
+httptools==0.5.0
+httpx==0.24.1
+idna 
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonpatch 
+jsonpointer==2.1
+MarkupSafe==2.1.3
+menuinst 
+orjson==3.9.1
+packaging 
+passlib==1.7.4
+pluggy 
+pyasn1==0.5.0
+pycosat 
+pycparser 
+pydantic==1.10.10
+pyOpenSSL 
+PySocks 
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+PyYAML==6.0
+requests
+rsa==4.9
+ruamel.yaml 
+ruamel.yaml.clib 
+six 
+sniffio==1.3.0
+starlette==0.27.0
+toolz 
+tqdm 
+typing_extensions==4.7.1
+ujson==5.8.0
+urllib3 
+uvicorn==0.22.0
+watchfiles==0.19.0
+websockets==11.0.3
+win-inet-pton 
+wincertstore==0.2
+zstandard==0.19.0
