--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ dnspython==2.3.0
 ecdsa==0.18.0
 email-validator==2.0.0.post2
 exceptiongroup==1.1.2
-fastapi==0.99.1
+fastapi[all]
 h11==0.14.0
 httpcore==0.17.2
 httptools==0.5.0
@@ -56,3 +56,4 @@ websockets==11.0.3
 win-inet-pton 
 wincertstore==0.2
 zstandard==0.19.0
+sqlalchemy
